[gd_scene load_steps=5 format=3 uid="uid://oepyxkvl4eup"]

[ext_resource type="Script" uid="uid://b7cv0rhs4uowy" path="res://Menus/main_menu.gd" id="1_jf8mj"]
[ext_resource type="Script" uid="uid://dyd25iglm1gar" path="res://Menus/box.gd" id="2_p3jrs"]

[sub_resource type="BoxMesh" id="BoxMesh_jf8mj"]
size = Vector3(900, 900, 1)

[sub_resource type="BoxMesh" id="BoxMesh_at0u2"]
resource_local_to_scene = true
size = Vector3(2000, 1200, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_jf8mj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="Background" type="Node2D" parent="."]
z_index = -1
position = Vector2(960, 540)

[node name="Box" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")

[node name="Box2" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, 0)

[node name="Box3" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, 0)

[node name="Box4" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(0, 270)

[node name="Box5" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(0, -270)

[node name="Box6" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, -270)

[node name="Box7" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, -270)

[node name="Box8" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, 270)

[node name="Box9" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, 270)

[node name="Box10" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")

[node name="Box11" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, 0)

[node name="Box12" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, 0)

[node name="Box13" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(0, 270)

[node name="Box14" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(0, -270)

[node name="Box15" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, -270)

[node name="Box16" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, -270)

[node name="Box17" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(540, 270)

[node name="Box18" type="MeshInstance2D" parent="Background"]
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_jf8mj")
script = ExtResource("2_p3jrs")
sector = Vector2(-540, 270)

[node name="Foreground" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="ForegroundBox" type="MeshInstance2D" parent="Foreground"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
mesh = SubResource("BoxMesh_at0u2")

[node name="MenuOptions" type="CanvasLayer" parent="."]
offset = Vector2(0, 1080)
transform = Transform2D(1, 0, 0, 1, 0, 1080)

[node name="Credits" type="Node2D" parent="MenuOptions"]
position = Vector2(-960, 540)
rotation = -0.174533

[node name="Credits" type="Label" parent="MenuOptions/Credits"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -223.554
offset_top = -120.608
offset_right = 237.446
offset_bottom = 98.3923
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 160
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fight" type="Node2D" parent="MenuOptions"]
position = Vector2(960, 540)
rotation = 0.0872665

[node name="Fight" type="Label" parent="MenuOptions/Fight"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -223.554
offset_top = -120.608
offset_right = 237.446
offset_bottom = 98.3923
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 160
text = "FIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Node2D" parent="MenuOptions"]
position = Vector2(2880, 540)
rotation = 0.261799

[node name="Info" type="Label" parent="MenuOptions/Info"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -223.554
offset_top = -120.608
offset_right = 237.446
offset_bottom = 98.3923
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 160
text = "INFO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Node2D" parent="MenuOptions"]
position = Vector2(4800, 540)
rotation = 0.261799

[node name="Settings" type="Label" parent="MenuOptions/Settings"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -223.554
offset_top = -120.608
offset_right = 237.446
offset_bottom = 98.3923
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 24
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 12
theme_override_font_sizes/font_size = 160
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleScreen" type="CanvasLayer" parent="."]

[node name="InitTimer" type="Timer" parent="TitleScreen"]
one_shot = true
autostart = true

[node name="Title" type="Label" parent="TitleScreen"]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -160.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 160
text = "GAMENIGHT TOURNEY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnyButton" type="Label" parent="TitleScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 40.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "PRESS ANY BUTTON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnyButtonFlicker" type="Timer" parent="TitleScreen"]

[node name="Menu" type="CanvasLayer" parent="."]
offset = Vector2(0, -1080)
transform = Transform2D(1, 0, 0, 1, 0, -1080)

[node name="Credits" type="Node2D" parent="Menu"]
visible = false
position = Vector2(-960, 540)

[node name="Credits" type="Label" parent="Menu/Credits"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -514.054
offset_top = -462.608
offset_right = -0.0540161
offset_bottom = 462.392
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "Game director:
Mikel

Gameplay programming:
Sylvia

Graphics/UI programming:
Ben

Artists:
Joe
Evelyn

Interns:
Hunter
Michael"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Appearances" type="Label" parent="Menu/Credits"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -6.10352e-05
offset_top = -462.0
offset_right = 514.0
offset_bottom = 463.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "Appearances:
Ben
Daniel
Evelyn
Joe
Michael
Mikel
Moqi
Nora
Ollie
Sylvia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FightRuleset" type="Node2D" parent="Menu"]
position = Vector2(960, 540)

[node name="RulesetTitle" type="Label" parent="Menu/FightRuleset"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -540.0
offset_right = 150.0
offset_bottom = -440.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 80
text = "RULESET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamemodeTitle" type="Label" parent="Menu/FightRuleset"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = -430.0
offset_right = 176.0
offset_bottom = -330.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 60
text = "GAMEMODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gamemode0" type="Label" parent="Menu/FightRuleset"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -528.0
offset_top = -330.0
offset_right = -176.0
offset_bottom = -230.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "Quick Fight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gamemode1" type="Label" parent="Menu/FightRuleset"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = -330.0
offset_right = 176.0
offset_bottom = -230.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "Classic Smash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gamemode2" type="Label" parent="Menu/FightRuleset"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 176.0
offset_top = -330.0
offset_right = 528.0
offset_bottom = -230.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 40
text = "Lava Floors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamemodeShader" type="ColorRect" parent="Menu/FightRuleset"]
offset_left = -176.0
offset_top = -330.0
offset_right = 176.0
offset_bottom = -230.0
color = Color(1, 1, 1, 0.392157)

[connection signal="timeout" from="TitleScreen/InitTimer" to="." method="_on_init_timer_timeout"]
[connection signal="timeout" from="TitleScreen/AnyButtonFlicker" to="." method="_on_any_button_flicker_timeout"]
